<resources>
    <string name="app_name">We chat</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="nickname_or_email">Nickname or email</string>
    <string name="password">Password</string>
    <string name="invalid_sign_up_info">Please, type correct required information.</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="sign_up_successfully">Sign up successfully</string>
    <string name="invalid_email_format">Invalid email format or length</string>
    <string name="invalid_nickname">Invalid nickname</string>
    <string name="invalid_password">Invalid password</string>
    <string name="sign_up_unsuccessfully">Sign up failed</string>
    <string name="sth_went_wrong">Something went wrong!</string>
    <string name="please_fill_correct_info">Please, fill correct required information.</string>
    <string name="unavailable_email">Unavailable email</string>
    <string name="unavailable_nickname">Unavailable nickname</string>
    <string name="weak_password">Password must be at least 6 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successfully">Login successfully</string>
    <string name="no_internet">Opps! No internet connection</string>
    <string name="search">Nickname or email</string>
    <string name="chat">Chat</string>
    <string name="explore">Explore</string>
    <string name="sign_out">Sign out</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="see">See</string>
    <string name="upload">Upload</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="no">No</string>
    <string name="enter_message">Enter message</string>
    <string name="upload_image">Upload image</string>
    <string name="sound_msg">Sound message</string>
    <string name="chane_password">Change password</string>
    <string name="ok">Ok</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="successfully">Successfully</string>
    <string name="incorrect_old_password">Incorrect old password</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="confirm_login">Successfully. Do you want to login, now?</string>
    <string name="search_your_frineds_and_chat">Search your friends and chat with them</string>
    <string name="invalid_nickname_format_or_length">Invalid nickname format or length</string>
    <string name="new_msg">New message</string>
    <string name="see_avatar">See avatar</string>
    <string name="no_avatar">No avatar</string>
    <string name="developing_feature">Developing feature</string>
</resources>