<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="viewModel"
            type="com.example.firebasechatappkotlinmvvm.ui.auth.sign_up.SignUpViewModel" />
    </data>

    <ScrollView style="@style/MachParentChild">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#FF00AA"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/mEdtNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mTvLogin"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/nickname"
                android:text="@={viewModel.nickname}" />

            <EditText
                android:id="@+id/mEdtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEdtNickname"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/email"
                android:text="@={viewModel.email}" />

            <EditText
                android:id="@+id/mEdtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEdtEmail"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />

            <Button
                android:id="@+id/mBtnSignUp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/mEdtPassword"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_main_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>

</layout>