<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.firebasechatappkotlinmvvm.ui.auth.login.LoginViewModel" />
    </data>

     <ScrollView
        style="@style/MachParentChild"
         android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="@dimen/_29ssp" />

            <EditText
                android:id="@+id/mEdtNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:hint="@string/nickname_or_email"
                android:text="@={viewModel.usernameOrEmail}"
                android:textSize="@dimen/_15ssp"/>

            <EditText
                android:id="@+id/mEdtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textSize="@dimen/_15ssp"/>

            <Button
                android:id="@+id/mBtnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_main_button"
                android:onClick="@{() -> viewModel.onBtnLoginClicked()}"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"/>
        </LinearLayout>
/    </ScrollView>

</layout>