<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.firebasechatappkotlinmvvm.ui.main.dashboard.profile.change_password.ChangePasswordViewModel" />
    </data>

    <ScrollView style="@style/MachParentChild"
        android:paddingHorizontal="5dp">
        <!--Use specified unit for layout_width
            because the dialog will be shrunk in width
            in some different density devices-->
        <RelativeLayout
            android:layout_width="@dimen/_300sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_30sdp"
            android:background="@drawable/shape_dialog"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/mTvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_26sdp"
                android:text="@string/chane_password"
                android:textAlignment="center"
                android:textSize="@dimen/_24ssp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#2E776D"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/mEdtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_28sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/old_password"
                android:layout_below="@id/mTvLogin"
                android:inputType="textPassword"
                android:textSize="@dimen/_17ssp"
                android:text="@={viewModel.oldPassword}"/>

            <EditText
                android:id="@+id/mEdtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:layout_below="@+id/mEdtOldPassword"
                android:textSize="@dimen/_17ssp"
                android:text="@={viewModel.newPassword}"/>

            <Button
                android:id="@+id/mBtnLogin"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:background="@drawable/shape_search_bar"
                android:text="@string/ok"
                android:textSize="@dimen/_17ssp"
                android:layout_below="@id/mEdtPassword"
                style="@style/ClickAnimStyle"
                android:onClick="@{()->viewModel.onBtnOkClicked()}"/>
        </RelativeLayout>
    </ScrollView>
</layout>